--- a/index.html
+++ b/index.html
@@ -4,27 +4,148 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
-    <header class="header">
-
-    </header>
+      <header class="header">
+        <img src="./images/logo_place_header.svg" alt="logo" class="logo logo__place_header">
+        <h1 class="header__title">Как научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+            <a href="#" class="header-link">Узнать &rarr;</a></p>
+        <div class="header__main-illustration"></div>
+         <div class="header__square-pic"></div>
+      </header>
     <main class="content">
       <section class="description">
+         <div class="two-columns">
+            <div class="two-columns__brief">
+              <h5>Главные проблемы в обучении</h5>
+            </div>
+            <div class="two-columns__main-text">
+              <p>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не даёт нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p><span class="two-columns__span-accent">Вывод: </span>учиться тоже надо уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            </div>
+         </div>
       </section>
 
       <section class="digits">
+        <h2 class="table__title">Цифры и факты</h2>
+        <h3 class="table__subtitle">Про учёбу и мозг</h3>
+        <ul class="table">
+           <li class="table__cell">
+             <h4 class= "table__heading">86 миллиардов</h4>
+             <p class="table__text">Число нейронов в мозге человека</p>
+           </li>
+           <li class="table__cell">
+             <h4class="table__heading">2.1 миллиарда</h4>
+             <p class="table__text">Число нуждающихся в повышении квалификации</p>
+             <p class="table__text">Всемирный Банк, 2017</p>
+          <li>
+          <li class="table__cell">
+            <h4 class= "table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class= "table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class= "table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+            </li>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+             <h4 class= "table__heading">1885 год</h4>
+             <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+             <h4 class= "table__heading">1889 год</h4>
+             <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <div class="feynman__illustration"></div>
       </section>
 
       <section class="kaufman">
+        <h2 class="table__title table__title_theme_dark">Принципы обучения</h2>
+        <h3 class="table__subtitle table__subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table__theme_dark">
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark ">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+       </ul>
+       <div class="triangle"></div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_header.svg" alt="logo" class="logo logo__place_footer">
+          <div class="footer__author"> &copy; Галина Гусева</div>
+        </div>
+          <div class="footer__column_links">
+               <h3 class="footer__column_heading">О Практикуме</h3>
+               <p class="footer__column_link"><a href="https://practicum.yandex.ru">Главная</a></p>
+               <p class="footer__column_link"><a href="#">Концепция</a></p>
+               <p class="footer__column_link"><a href="#">Наставники</a></p>
+           </div>
+           <div class="footer__column_content_social">
+               <h3 class="footer__column_heading">Соцсети</h3>
+                <p class="footer__social_icon"><a href="#"><img src="./images/facebook_color_white.svg" class="footer__icons"> Facebok</a></p>
+                <p class="footer__social_icon"><a href="https://vk.com/yandex.practicum"><img src="./images/vk_color_white.svg" class="footer__icons"> В контакте</a></p>
+                <p class="footer__social_icon"><a href="#"><img src="./images/instagram_color_white.svg" class="footer__icons"> Instagram</a></p>
+            </div>
+         </div>
     </footer>
   </div>
 </body>
